## Server[0.95b] - 2016-1-14
### Added
 - Server can take commands from clients now. Added 3 - s/log, s/mlog, s/threadip.
### Fix
 - No chatlog.append on thread timeout


## Client[0.98] - 2016-1-14
### Added
 - Message sender thread
 - 'kpALIVE' automessage every 7 sec (Server autokicks after 30 sec of no communication now)
 - "/users" command is back and also added "/usr". Now 3 commands show the user list, the first 2 and "/u"
 - Server address is shown in title now

## Server[0.95] - 2016-1-14
### Added
 - Time outs for user threads (set to every 8 sec currently)
 - Users get kicked after 30 sec of no communication and reason is shown as TIMEOUT
 - Welcome message can be changed from server console now with "welcm" command
### Fix
 - New lines get stripped from usernames


## Client[0.97] - 2016-1-11
### Added
 - Enabled unicode for sent text messages
 - Auto rejoin after losing connection
### Changed
 - Shortened "/users" command to "/u"
 - Shortened "/register" command to "/reg"


## Client[0.97] - 2016-1-11
### Added
 - Enabled unicode for sent text messages
 - Auto rejoin after losing connection
### Changed
 - Shortened "/users" command to "/u"
 - Shortened "/register" command to "/reg"


## Client[0.96] - 2016-1-5
### Added
 - Updater (server not included)

## Server[0.93c] - 2016-1-5
### Fix
 - broadcastPrivate function was looking for unregistered users when variable was not set and crashed a thread


## Client[0.95b] - 2015-12-31
### Added
 - Commands after @Username
### Changed
 - Different colortag for private server warnings
### Fix
 - Won't crash when can't read settings file or find a value in it

## Server[0.93b] - 2015-12-31
### Added
 - Warning when private message target user does not exist
### Fix
 - Threads won't crash when user is disconnecting with no username set


## Client[0.95] - 2015-12-30
### Added
 - Offline messages (Offline users are tagged with light blue color)
 - App title changes when username is a duplicate now
## Changed